--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
 {% block title %}
-{% if studio_info %} {{ studio_info.name }} {% else %} JuFire Studio
-{% endif %} - 首页
+{% if studio_info %} {{ studio_info.name }} {% else %} JuFire Studio {% endif %} - 首页
 {% endblock %}
-
 
 {% block content %}
 <!-- Hero Section -->
